
The format is loosely based on [Keep a Changelog](http://keepachangelog.com/en/1.0.0/)
and this project adheres to [Semantic Versioning](http://semver.org/spec/v2.0.0.html).

## [0.20.0]
- Refactor to use absolute imports throughout to avoid relative import issues when using hcli_core use as a python library.
- Move hcli_core.py to __init__.py to avoid double hcli_core call on connector

## [0.19.2]
- Remove python 3.12 circleci test for now because of a compatibility problem

## [0.19.1]
- Update to falcon 3.1.3 (python 3.12 support)
- Update to test for python 3.12 in circleci
- Update test to gunicorn 21.2.0

## [0.19.0]
- Remove findById that does nothing in execution resource (speed improvement).
- Add uid at the tailend of the path to help with path based routing upstream constraints (e.g. nginx config).

## [0.18.4]
- Update README. Badge move out of title.

## [0.18.3]
- Remove hg from the sample applications and into it's own independent repository to foster independent development.
- Update hg related documentation.
- Remove hg related dependencies to pyserial and background scheduler.
- Remove remaining hc related documentation in README.

## [0.18.2]
- Remove hc from the sample applications and into it's own independent repository to foster independent development.
- Update hc related documentation.
- Remove hc related dependencies to pyserial and background scheduler.
- Fix badging URLs and reorder.

## [0.18.1]
- Fix mishandling of a disconnect exception and direct service interaction with the serial device.
- Fix nudger termination edge case.
- Fix to isolate the controler realtime loop to a single thread.
- Fix streamer termination check and reset logic to avoid realtime queue pickup during reset.

## [0.18.0]
- Redesign to a controller model to improve the stability of GRBL flow control.

## [0.17.0]
- Add hc logs to poll a log tail when access to server log stdout isn't available (single client polling only).