@@ -1,6 +1,5 @@
 from __future__ import absolute_import, division, print_function
 
-import falcon
 import json
 from hcli_core.hcli import api
 from hcli_core.hcli import home
@@ -16,23 +15,22 @@ from hcli_core import config
 from hcli_core import template
 
 def connector(plugin_path=None):
-    try:
-        # We load the HCLI template in memory to reduce disk io
-        config.set_plugin_path(plugin_path)
-        config.parse_template(template.Template())
+    import falcon
 
-        # We setup the HCLI Connector
-        server = falcon.App()
-        server.add_route(home.HomeController.route, api.HomeApi())
-        server.add_route(secondaryhome.SecondaryHomeController.route, api.SecondaryHomeApi())
-        server.add_route(document.DocumentController.route, api.DocumentApi())
-        server.add_route(command.CommandController.route, api.CommandApi())
-        server.add_route(option.OptionController.route, api.OptionApi())
-        server.add_route(execution.ExecutionController.route, api.ExecutionApi())
-        server.add_route(finalexecution.FinalGetExecutionController.route, api.FinalExecutionApi())
-        server.add_route(finalexecution.FinalPostExecutionController.route, api.FinalExecutionApi())
-        server.add_route(parameter.ParameterController.route, api.ParameterApi())
+    # We load the HCLI template in memory to reduce disk io
+    config.set_plugin_path(plugin_path)
+    config.parse_template(template.Template())
 
-        return server
-    except Exception as e:
-        print("HHHHHHHHHHHHHHHHHHHHHHHh")
+    # We setup the HCLI Connector
+    server = falcon.App()
+    server.add_route(home.HomeController.route, api.HomeApi())
+    server.add_route(secondaryhome.SecondaryHomeController.route, api.SecondaryHomeApi())
+    server.add_route(document.DocumentController.route, api.DocumentApi())
+    server.add_route(command.CommandController.route, api.CommandApi())
+    server.add_route(option.OptionController.route, api.OptionApi())
+    server.add_route(execution.ExecutionController.route, api.ExecutionApi())
+    server.add_route(finalexecution.FinalGetExecutionController.route, api.FinalExecutionApi())
+    server.add_route(finalexecution.FinalPostExecutionController.route, api.FinalExecutionApi())
+    server.add_route(parameter.ParameterController.route, api.ParameterApi())
+
+    return server
